--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
   <script>
   // register ServiceWorker, remember to use absolute path!
   if (navigator.serviceWorker) {
-    navigator.serviceWorker.register('/ludvax/sw.js', {scope: '/ludvax/'})
+    navigator.serviceWorker.register('/{repository}/sw.js', {scope: '/{repository}/'})
   }
   
   // --- Application code here ---
   </script>
-<amp-install-serviceworker src="/sw.js" data-iframe-src="install-sw.html" layout="nodisplay">
+  <amp-install-serviceworker src="/sw.js" data-iframe-src="install-sw.html" layout="nodisplay">
 </amp-install-serviceworker>
 </body>
 </html>
