--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       </style>
       <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
    
-      <link rel="canonical" href=".">
-    
+      <link rel="canonical" href="https://ludvax.github.io/ludvax/">
+
     <!-- <link rel="canonical" href="https://{guthub_username}.github.io/{repository}/" /> -->
 
     <title>My AMP Page</title>
@@ -52,15 +52,20 @@
 </head>
 <body>
   <h1>Content</h1>
-  <script>
+<!--   <script>
   // register ServiceWorker, remember to use absolute path!
   if (navigator.serviceWorker) {
     navigator.serviceWorker.register('/{repository}/sw.js', {scope: '/{repository}/'})
   }
   
   // --- Application code here ---
-  </script>
-  <amp-install-serviceworker src="/sw.js" data-iframe-src="install-sw.html" layout="nodisplay">
+  </script> -->
+  <amp-install-serviceworker
+      src="https://ludvax.github.io/ludvax/sw.js"
+      layout="nodisplay">
 </amp-install-serviceworker>
+<!--   <amp-install-serviceworker 
+  src="/sw.js" data-iframe-src="install-sw.html" layout="nodisplay"></amp-install-serviceworker>
+</amp-install-serviceworker> -->
 </body>
 </html>
